syntax = "proto3";

package ai.wanaku.capabilities.sdk.api.types;

import "input_schema.proto";

// This message represents a reference to a tool with various attributes.
message ToolReference {
  string id = 1;
  string name = 2;
  string description = 3;
  string uri = 4;
  string type = 5;
  InputSchema input_schema = 6;
  string configuration_uri = 7;
  string secrets_uri = 8;
  string namespace = 9;
  map<string, string> labels = 10;
}